--- a/source/sass/blocks/page.scss
+++ b/source/sass/blocks/page.scss
@@ -1,14 +1,15 @@
-.page {
-  height: 100%;
-  font-size: 18px;
-  font-family: "PT Sans", "Arial", sans-serif;
-  line-height: 26px;
-  text-transform: uppercase;
-}
-
 .page__body {
+  min-width: 320 px;
   min-height: 100%;
   margin: 0;
-  background-color: #ffffff;
-  color: #000000;
+  font-family: $font-family;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 21px;
+  text-transform: uppercase;
+  color: $black;
+
+  @media (min-width: $desktop-width) {
+    background-color: $bg-page-desktop;
+  }
 }
