--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,26 +1,30 @@
-@import "./normalize.scss";
 @import "./variables.scss";
-@import "./fonts.scss";
-@import "./mixin.scss";
 @import "./global.scss";
+@import "./fonts.scss";
+@import "./visually-hidden.scss";
 
 // blocks
-@import "./blocks/advantages.scss";
-@import "./blocks/booking.scss";
-@import "./blocks/button.scss";
-@import "./blocks/copyright.scss";
-@import "./blocks/form.scss";
-@import "./blocks/gallery.scss";
-@import "./blocks/intro.scss";
-@import "./blocks/main-nav.scss";
-@import "./blocks/map.scss";
-@import "./blocks/page-footer.scss";
+@import "./blocks/page.scss";
+@import "./blocks/container.scss";
 @import "./blocks/page-header.scss";
 @import "./blocks/page-main.scss";
-@import "./blocks/page.scss";
-@import "./blocks/photos.scss";
-@import "./blocks/popup.scss";
-@import "./blocks/review.scss";
+@import "./blocks/page-footer.scss";
+@import "./blocks/main-nav.scss";
+@import "./blocks/advantages.scss";
+@import "./blocks/advantage.scss";
+@import "./blocks/find-hotel.scss";
+@import "./blocks/button.scss";
 @import "./blocks/social.scss";
+@import "./blocks/copyright.scss";
+@import "./blocks/description.scss";
+@import "./blocks/feedback-form.scss";
+@import "./blocks/input.scss";
+@import "./blocks/popup.scss";
+@import "./blocks/catalog.scss";
+@import "./blocks/photo-card.scss";
+@import "./blocks/player.scss";
+@import "./blocks/map.scss";
+@import "./blocks/likes.scss";
 @import "./blocks/video.scss";
-@import "./blocks/welcome.scss";
+@import "./blocks/intro.scss";
+@import "./blocks/nowrap.scss";
