Продолжение стилизации, остановился на main-nav

--- a/source/sass/blocks/main-nav.scss
+++ b/source/sass/blocks/main-nav.scss
@@ -81,11 +81,12 @@
   }
 
   .main-nav--no-js {
-    .main-nav__list
-    display: block;
-  }
+    .main-nav__list {
+      display: block;
+    }
 
-  .main-nav__toggle {
-    display: none;
+    .main-nav__toggle {
+      display: none;
+    }
   }
 }
