Добавляет стилизацию классов catalog, likes, photo-card и изменяет стилизацию класса intro

--- a/source/sass/blocks/intro.scss
+++ b/source/sass/blocks/intro.scss
@@ -13,7 +13,7 @@
     background-image: url("../img/bg-intro-index@2x.jpg");
   }
 
-  &:after {
+  &::after {
     content: "";
     background-image: url("../img/intro-triangle.svg");
     height: 57px;
