--- a/source/sass/blocks/copyright.scss
+++ b/source/sass/blocks/copyright.scss
@@ -1,7 +1,7 @@
 .copyright {
   display: flex;
   align-items: center;
-  justify-content: start;
+  justify-content: center;
 }
 
 .copyright__text {
