Добавляет стилизацию класса popu

--- a/source/sass/blocks/advantages.scss
+++ b/source/sass/blocks/advantages.scss
@@ -22,7 +22,7 @@
 .advantages__list {
   padding: 0;
   margin: 0;
-  letter-spacing: none;
+  list-style: none;
   flex-direction: column;
   background-color: #eeeeee;
   position: relative;
